@@ -1,5 +1,14 @@
 2005-12-07  David Hampton  <hampton@employees.org>
 
+	* src/gnome/gnc-plugin-page-budget.c:
+	* src/gnome/ui/gnc-plugin-page-budget-ui.xml: Add support for
+	opening account registers from the budget page.  Use shorter
+	toolbar labels.
+
+	* src/gnome-utils/gnc-tree-view-account.c: Add a check that the
+	tree selection is in the right mode to call
+	gnc_tree_view_account_get_selected_account().
+
 	* configure.in: Comment out the recently introduced second set of
 	checks for gconf.  They cause problems with schema installation.
 
